@@ -1934,3 +1934,4 @@ ENGINE_set_ctrl_function                2522	NOEXIST::FUNCTION:
 BN_pseudo_rand_range                    2523	EXIST::FUNCTION:
 X509_STORE_CTX_set_verify_cb            2524	EXIST::FUNCTION:
 ERR_load_COMP_strings                   2525	EXIST::FUNCTION:
+OPENSSL_cleanse                         3245	EXIST::FUNCTION:
